레트로핏 join, userCheck 기능 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">CherryQRQR</string>
-    <string name="user_id">userId</string>
+    <string name="login_state">login_state</string>
+    <string name="sign_state">sign_state</string>
     <string name="user_token">125362172131-58ttiqksba2992vu3nugj180dk45bbms.apps.googleusercontent.com</string>
+    <string name="idToken">FireBaseIdToken</string> <!-- 레트로핏 통신을 위한 idToken -->
+    <string name="uid">uid</string> <!-- userCheck를 위한 uid -->
+    <string name="local_url">http://192.168.8.43:18080/</string><!-- 연결된 wifi ip -->
 </resources>
